# metai

./: .gitignore  README.md  extract_cordon.py  flake.nix  insert_cordon.py  metai.cabal  metai.csv  metai.txt  shell.nix  statistics.ipynb
.github/workflows/: release.yml
app/: Main.hs
app/Metai/: Extra.hs  Hexameter.hs  Parse.hs  Syllable.hs  Token.hs
donelaitis-scansion/: Metai.ipynb
lib/Metai/: Caesura.hs  Hexameter.hs  Parse.hs  Syllable.hs  Token.hs
scansion/: metai.cabal
scansion/app/: Main.hs
scansion/lib/Metai/: Caesura.hs  Extra.hs  Parse.hs  Syllable.hs  Token.hs
scansion/test/: Spec.hs
test/: Spec.hs
