cabal-version:      2.4
name:               metai
version:            0.1.0.0
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de
extra-source-files: metai.txt

executable metai
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , unicode-transforms
                    , text
                    , split
                    , vector
                    , statistics
    other-modules:    Metai.Extra
                    , Metai.Parse
                    , Metai.Token
                    , Metai.Syllable
    hs-source-dirs:   app
    default-language: Haskell2010
