cabal-version:      2.4
name:               metai
version:            0.1.0
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de
extra-source-files: metai.csv

library
    hs-source-dirs:   lib
    exposed-modules:  Metai.Extra
                    , Metai.Caesura
                    , Metai.Parse
                    , Metai.Token
                    , Metai.Syllable
                    , Metai.Hexameter
    build-depends:    base
                    , megaparsec
                    , bytestring
                    , vector >= 0.12 && < 0.13
                    , cassava >= 0.5 && < 0.6
                    , unicode-transforms
                    , text >= 1 && < 2
                    , split >= 0.2 && < 0.3
    default-language: Haskell2010
    ghc-options:      -O2 -Wall

executable metai
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , metai
                    , text >= 1 && < 2
                    , cassava >= 0.5 && < 0.6
                    , bytestring
                    , containers
                    , vector
    default-language: Haskell2010
    ghc-options:      -O2 -Wall

test-suite metai-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base
                    , metai
                    , text >= 1 && < 2
                    , tasty
                    , tasty-hunit
    default-language: Haskell2010
    ghc-options:      -O2 -Wall
